# nitrogen

./: .gitignore  .gitlab-ci.yml  Cargo.toml  README.md  autoexec.n2o  example.n2o  shell.nix
apps/dump-atmosphere-tables/: Cargo.toml
apps/dump-atmosphere-tables/src/: main.rs
apps/dump-layer-pack/: Cargo.toml
apps/dump-layer-pack/src/: main.rs
apps/dump-terrain-tables/: Cargo.toml
apps/dump-terrain-tables/src/: main.rs
apps/dump-terrain-tiles/: Cargo.toml  README.md
apps/dump-terrain-tiles/src/: main.rs
apps/dump-terrain-tiles/src/bmng/: index.rs  mod.rs
apps/dump-terrain-tiles/src/mip/: index.rs  mod.rs  tile.rs
apps/dump-terrain-tiles/src/srtm/: index.rs  mod.rs  tile.rs
apps/web-demo/: Cargo.toml  README.md  index.js  webpack.config.js
apps/web-demo/src/: lib.rs
libs/sim/absolute_unit/: Cargo.toml
libs/sim/animate/: Cargo.toml
libs/sim/animate/src/: animation.rs  lib.rs  timeline.rs  timestep.rs
libs/sim/camera/: Cargo.toml
libs/sim/camera/src/: arc_ball_camera.rs  camera_impl.rs  lib.rs  ufo_camera.rs
libs/sim/event_mapper/: Cargo.toml
libs/sim/event_mapper/src/: bindings.rs  input.rs  lib.rs  mapper.rs  widget.rs
libs/sim/geodesy/: Cargo.toml
libs/sim/geodesy/src/: cartesian.rs  graticule.rs
libs/sim/geometry/: Cargo.toml
libs/sim/measure/: Cargo.toml
libs/sim/measure/src/: lib.rs
libs/sim/orrery/: Cargo.toml
libs/sim/orrery/src/: lib.rs
libs/sim/star_catalog/: Cargo.toml
libs/sim/universe/: Cargo.toml
libs/sim/vehicle/: Cargo.toml
libs/sim/vehicle/src/: lib.rs
libs/sim/vehicle/src/controls/: absolute_control.rs  mod.rs  symmetric_inceptor.rs  throttle_inceptor.rs  toggle_control.rs
libs/sim/vehicle/src/effectors/: mod.rs  toggle_effector.rs
libs/sim/vehicle/src/systems/: airframe.rs  fuel.rs  mod.rs  power.rs  simple_jet_engine.rs
libs/sim/vehicle/src/systems/engine/: glider.rs  mod.rs
libs/system/build_shaders/: Cargo.toml
libs/system/catalog/: Cargo.toml
libs/system/catalog/src/: catalog.rs  directory_drawer.rs  drawer_interface.rs  file_metadata.rs  lib.rs
libs/system/command/: Cargo.toml
libs/system/command/src/: bindings.rs  command.rs  keyset.rs  lib.rs
libs/system/commandable/: Cargo.toml
libs/system/gpu/: Cargo.toml
libs/system/gpu/src/: detail.rs  frame_graph.rs  frame_state_tracker.rs  lib.rs  size.rs  upload_tracker.rs
libs/system/input/: Cargo.toml
libs/system/input/examples/: basic.rs
libs/system/input/src/: generic.rs  lib.rs
libs/system/jilrs/: Cargo.toml
libs/system/jilrs/src/: lib.rs
libs/system/nitrous/: Cargo.toml
libs/system/nitrous_injector/: Cargo.toml
libs/system/packed_struct/: Cargo.toml
libs/system/tracelog/: Cargo.toml
libs/system/tracelog/src/: lib.rs
libs/system/window/: Cargo.toml
libs/system/window/src/: lib.rs  size.rs
libs/util/absolute_unit/: Cargo.toml
libs/util/absolute_unit/src/: acceleration.rs  angle.rs  angular_acceleration.rs  angular_velocity.rs  area.rs  density.rs  dynamic_unit.rs  force.rs  generic.rs  length.rs  lib.rs  mass.rs  mass_rate.rs  pressure.rs  rotational_inertia.rs  temperature.rs  time.rs  torque.rs  velocity.rs  velocity_squared.rs  volume.rs  weight.rs
libs/util/absolute_unit/src/unit/: arcminutes.rs  arcseconds.rs  celsius.rs  degrees.rs  fahrenheit.rs  feet.rs  hours.rs  kelvin.rs  kilograms.rs  kilometers.rs  meters.rs  miles.rs  mod.rs  nautical_miles.rs  newtons.rs  pascals.rs  pounds.rs  pounds_force.rs  pounds_mass.rs  pounds_square_foot.rs  pounds_weight.rs  radians.rs  rankine.rs  scalar.rs  seconds.rs  slugs.rs
libs/util/animate/: Cargo.toml
libs/util/animate/src/: lib.rs  timeline.rs
libs/util/ansi/: Cargo.toml
libs/util/ansi/src/: lib.rs
libs/util/build_shaders/: Cargo.toml
libs/util/build_shaders/shaders/: example.vert.glsl
libs/util/build_shaders/src/: lib.rs
libs/util/geodesy/: Cargo.toml
libs/util/geodesy/src/: cartesian.rs  graticule.rs  lib.rs
libs/util/geodesy/src/origin/: geo_center.rs  geo_surface.rs  target.rs
libs/util/geometry/: Cargo.toml
libs/util/geometry/src/: aabb3.rs  algorithm.rs  arrow.rs  axis_aligned_bounding_box.rs  circle.rs  cylinder.rs  lib.rs  plane.rs  ray.rs  sphere.rs
libs/util/geometry/src/intersect/: circle_plane.rs  mod.rs  sphere_plane.rs  sphere_ray.rs
libs/util/nitrous/: Cargo.toml  build.rs
libs/util/nitrous/src/: ast.rs  exec.rs  heap.rs  ir.rs  lib.rs  lower.rs  memory.rs  mod.rs  script.lalrpop  script.rs  value.rs
libs/util/nitrous/src/lang/: script.lalrpop
libs/util/nitrous/tests/: test_exec.rs  test_injector.rs
libs/util/nitrous_injector/: Cargo.toml
libs/util/nitrous_injector/src/: component.rs  component_injector.rs  injector.rs  injector_common.rs  lib.rs  resource.rs  resource_injector.rs
libs/util/nitrous_injector/tests/: test_injector.rs
libs/util/packed_injector/: Cargo.toml
libs/util/packed_injector/src/: lib.rs  packed.rs
libs/util/packed_struct/: Cargo.toml  README.md
libs/util/packed_struct/src/: lib.rs
libs/util/packed_struct/tests/: test_proc_macro.rs
libs/util/physical_constants/: Cargo.toml
libs/util/physical_constants/src/: atmosphere.rs  lib.rs
libs/util/runtime/: Cargo.toml
libs/util/star_catalog/: Cargo.toml
libs/wgpu-buffer/atlas/: Cargo.toml
libs/wgpu-buffer/atmosphere/: Cargo.toml
libs/wgpu-buffer/composite/: Cargo.toml
libs/wgpu-buffer/font_common/: Cargo.toml
libs/wgpu-buffer/font_ttf/: Cargo.toml
libs/wgpu-buffer/fullscreen/: Cargo.toml
libs/wgpu-buffer/global_data/: Cargo.toml
libs/wgpu-buffer/marker/: Cargo.toml
libs/wgpu-buffer/shader_shared/: Cargo.toml
libs/wgpu-buffer/stars/: Cargo.toml
libs/wgpu-buffer/terrain/: Cargo.toml
libs/wgpu-buffer/terrain_geo/: Cargo.toml
libs/wgpu-buffer/text_layout/: Cargo.toml
libs/wgpu-buffer/ui/: Cargo.toml
libs/wgpu-buffer/widget/: Cargo.toml
libs/wgpu-buffer/world/: Cargo.toml  build.rs
libs/wgpu-render/composite/: Cargo.toml
libs/wgpu-render/screen_text/: Cargo.toml
libs/wgpu-render/skybox/: Cargo.toml
libs/wgpu-render/terrain/: Cargo.toml
libs/wgpu-render/ui/: Cargo.toml
src/: main.rs
(+248 files in other folders)
