[package]
name = "nitrogen"
version = "0.1.0"
authors = ["Terrence Cole <terrence.d.cole@gmail.com>"]
edition = "2018"

[workspace]
members = [
    # Various helper applications.
    "apps/dump-atmosphere-tables",
    "apps/dump-layer-pack",
    "apps/dump-terrain-tables",
    "apps/dump-terrain-tiles",
    "apps/web-demo",

    # Only external dependencies, appropriate for splitting
    # out fully, once mature enough.
    "libs/util/absolute_unit",
    "libs/util/animate",
    "libs/util/ansi",
    "libs/util/build_shaders",
    "libs/util/geodesy",
    "libs/util/geometry",
    "libs/util/nitrous",
    "libs/util/nitrous_injector",
    "libs/util/packed_struct",
    "libs/util/physical_constants",
    "libs/util/star_catalog",

    # Only external and util dependencies. Generally adapting or wrapping
    # system level platform capabilities.
    "libs/system/catalog",
    "libs/system/gpu",
    "libs/system/input",

    # Only external, util, and system dependencies. Generally concerned
    # with running the simulated environment.
    "libs/sim/camera",
    "libs/sim/orrery",
    "libs/sim/universe",

    # GPU buffer management and drawing pass implementations.
    "libs/wgpu-buffer/atlas",
    "libs/wgpu-buffer/atmosphere",
    "libs/wgpu-buffer/composite",
    "libs/wgpu-buffer/font_common",
    "libs/wgpu-buffer/font_ttf",
    "libs/wgpu-buffer/fullscreen",
    "libs/wgpu-buffer/global_data",
    "libs/wgpu-buffer/shader_shared",
    "libs/wgpu-buffer/stars",
    "libs/wgpu-buffer/terrain",
    "libs/wgpu-buffer/ui",
    "libs/wgpu-buffer/widget",
    "libs/wgpu-buffer/world",
]

[dependencies]
chrono = "^ 0.4"
env_logger = "^ 0.8"
anyhow = "^ 1"
image = "^ 0.23"
legion = "^ 0.4"
log = "^ 0.4"
nalgebra = "^ 0.29"
parking_lot = "^ 0.11"
paste = "^ 1"
rayon = "= 1.4.0"
structopt = "^ 0.3"
tokio = { version = "^ 1.0", features = ["rt-multi-thread", "macros", "io-util", "fs", "sync"] }
winit = { version = "^ 0.24", features = ["web-sys"] }
absolute_unit = { path = "libs/util/absolute_unit" }
animate = { path = "libs/util/animate" }
atmosphere = { path = "libs/wgpu-buffer/atmosphere" }
camera = { path = "libs/sim/camera" }
catalog = { path = "libs/system/catalog" }
composite = { path = "libs/wgpu-buffer/composite" }
fullscreen = { path = "libs/wgpu-buffer/fullscreen" }
geodesy = { path = "libs/util/geodesy" }
global_data = { path = "libs/wgpu-buffer/global_data" }
gpu = { path = "libs/system/gpu" }
input = { path = "libs/system/input" }
nitrous = { path = "libs/util/nitrous" }
nitrous_injector = { path = "libs/util/nitrous_injector" }
orrery = { path = "libs/sim/orrery" }
stars = { path = "libs/wgpu-buffer/stars" }
terrain = { path = "libs/wgpu-buffer/terrain" }
ui = { path = "libs/wgpu-buffer/ui" }
widget = { path = "libs/wgpu-buffer/widget" }
world = { path = "libs/wgpu-buffer/world" }
