[package]
name = "nitrogen"
version = "0.0.0"
authors = ["Terrence Cole <terrence.d.cole@gmail.com>"]
edition = "2021"

[workspace]
members = [
    # Various helper applications.
    "apps/dump-atmosphere-tables",
    "apps/dump-layer-pack",
    "apps/dump-terrain-tables",
    "apps/dump-terrain-tiles",
    "apps/web-demo",

    # Only external dependencies, appropriate for splitting
    # out fully, once mature enough.
    "libs/util/absolute_unit",
    "libs/util/ansi",
    "libs/util/build_shaders",
    "libs/util/geodesy",
    "libs/util/geometry",
    "libs/util/nitrous",
    "libs/util/nitrous_injector",
    "libs/util/packed_struct",
    "libs/util/physical_constants",
    "libs/util/runtime",
    "libs/util/star_catalog",

    # Only external and util dependencies. Generally adapting or wrapping
    # system level platform capabilities.
    "libs/system/catalog",
    "libs/system/gpu",
    "libs/system/input",
    "libs/system/tracelog",
    "libs/system/window",

    # Only external, util, and system dependencies. Generally concerned
    # with running the simulated environment.
    "libs/sim/animate",
    "libs/sim/camera",
    "libs/sim/event_mapper",
    "libs/sim/measure",
    "libs/sim/orrery",

    # GPU buffer management and drawing pass implementations.
    "libs/wgpu-buffer/atlas",
    "libs/wgpu-buffer/atmosphere",
    "libs/wgpu-buffer/composite",
    "libs/wgpu-buffer/font_common",
    "libs/wgpu-buffer/font_ttf",
    "libs/wgpu-buffer/fullscreen",
    "libs/wgpu-buffer/global_data",
    "libs/wgpu-buffer/shader_shared",
    "libs/wgpu-buffer/stars",
    "libs/wgpu-buffer/terrain",
    "libs/wgpu-buffer/ui",
    "libs/wgpu-buffer/widget",
    "libs/wgpu-buffer/world",
]

[dependencies]
chrono = "^ 0.4"
env_logger = "^ 0.9"
anyhow = { version = "^ 1", features = ["backtrace"] }
bevy_ecs = { version = "^ 0.7", features = ["trace"] }
image = "^ 0.24"
log = "^ 0.4"
nalgebra = "^ 0.31"
parking_lot = "^ 0.11"
paste = "^ 1"
platform-dirs = "^ 0.3"
rayon = "^ 1.5"
structopt = "^ 0.3"
terminal_size = "^ 0.1"
wgpu = { version = "^ 0.12", features = ["spirv"] }
absolute_unit = { path = "libs/util/absolute_unit" }
animate = { path = "libs/sim/animate" }
atmosphere = { path = "libs/wgpu-buffer/atmosphere" }
camera = { path = "libs/sim/camera" }
catalog = { path = "libs/system/catalog" }
composite = { path = "libs/wgpu-buffer/composite" }
event_mapper = { path = "libs/sim/event_mapper" }
fullscreen = { path = "libs/wgpu-buffer/fullscreen" }
geodesy = { path = "libs/util/geodesy" }
global_data = { path = "libs/wgpu-buffer/global_data" }
gpu = { path = "libs/system/gpu" }
input = { path = "libs/system/input" }
measure = { path = "libs/sim/measure" }
nitrous = { path = "libs/util/nitrous" }
orrery = { path = "libs/sim/orrery" }
runtime = { path = "libs/util/runtime" }
stars = { path = "libs/wgpu-buffer/stars" }
terrain = { path = "libs/wgpu-buffer/terrain" }
tracelog = { path = "libs/system/tracelog" }
ui = { path = "libs/wgpu-buffer/ui" }
widget = { path = "libs/wgpu-buffer/widget" }
window = { path = "libs/system/window" }
world_render = { package = "world", path = "libs/wgpu-buffer/world" }