[package]
name = "dump-atmosphere-tables"
version = "0.1.0"
edition = "2018"

[dependencies]
anyhow = "^ 1"
env_logger = "^ 0.8"
futures = "^ 0.3"
structopt = "^ 0.3"
atmosphere = { path = "../../libs/wgpu-buffer/atmosphere" }
gpu = { path = "../../libs/system/gpu" }
input = { path = "../../libs/system/input" }
nitrous = { path = "../../libs/util/nitrous" }
winit = { version = "^ 0.24", features = ["web-sys"] }
