[package]
name = "dump-atmosphere-tables"
version = "0.0.0"
edition = "2021"

[dependencies]
anyhow = { version = "^ 1", features = ["backtrace"] }
env_logger = "^ 0.9"
structopt = "^ 0.3"
atmosphere = { path = "../../libs/wgpu-buffer/atmosphere" }
gpu = { path = "../../libs/system/gpu" }
input = { path = "../../libs/system/input" }
nitrous = { path = "../../libs/util/nitrous" }
runtime = { path = "../../libs/util/runtime" }
window = { path = "../../libs/system/window" }
