[package]
name = "dump-terrain-tiles"
version = "0.0.0"
authors = ["Terrence Cole <terrence.d.cole@gmail.com>"]
edition = "2021"

[dependencies]
approx = "^ 0.5"
bzip2 = "^ 0.4"
anyhow = { version = "^ 1", features = ["backtrace"] }
image = "^ 0.23"
json = "^ 0.12"
memmap = "^ 0.7"
nalgebra = "^ 0.31"
parking_lot = "^ 0.11"
rayon = "= 1.4.0"
structopt = "^ 0.3"
zerocopy = "^ 0.5"
absolute_unit = { path = "../../libs/util/absolute_unit" }
geodesy = { path = "../../libs/util/geodesy" }
terrain = { path = "../../libs/wgpu-buffer/terrain" }
