[package]
name = "dump-terrain-tiles"
description.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true
readme.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
approx.workspace = true
bzip2.workspace = true
anyhow.workspace = true
image.workspace = true
json.workspace = true
memmap.workspace = true
nalgebra.workspace = true
parking_lot.workspace = true
rayon.workspace = true
structopt.workspace = true
zerocopy.workspace = true
# Internal
absolute_unit.workspace = true
geodesy.workspace = true
terrain.workspace = true
