[package]
name = "web-demo"
version = "0.0.0"
authors = ["Terrence Cole <terrence.d.cole@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = { version = "^ 1", features = ["backtrace"] }
chrono = "^ 0.4"
console_error_panic_hook = "^ 0.1"
log = "^ 0.4"
parking_lot = "^ 0.11"
smallvec = "^ 1.4"
tokio = { version = "^ 1.0", features = ["rt-multi-thread", "macros", "io-util", "fs", "sync"] }
wasm-bindgen = "=0.2.69"
wasm-bindgen-futures = "=0.4.19"
web-sys = { version = "=0.3.46", features = ["console"] }
wgpu = "=0.7.0"
winit = { version = "^ 0.24", features = ["web-sys"] }
absolute_unit = { path = "../../libs/util/absolute_unit" }
camera = { path = "../../libs/sim/camera" }
# fullscreen = { path = "../../libs/wgpu-buffer/fullscreen" }
geodesy = { path = "../../libs/util/geodesy" }
global_data = { path = "../../libs/wgpu-buffer/global_data" }
gpu = { path = "../../libs/system/gpu" }
input = { path = "../../libs/system/input" }
nitrous = { path = "../../libs/util/nitrous" }
orrery = { path = "../../libs/sim/orrery" }
