[package]
name = "web-demo"
version = "0.0.0"
authors = ["Terrence Cole <terrence.d.cole@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = { version = "^ 1", features = ["backtrace"] }
chrono = "^ 0.4"
console_error_panic_hook = "^ 0.1"
log = "^ 0.4"
smallvec = "^ 1.4"
wasm-bindgen = "=0.2.76"
wasm-bindgen-futures = "=0.4.26"
web-sys = { version = "=0.3.53", features = ["console"] }
wgpu = "^ 0.12"
winit = "^ 0.26"
absolute_unit = { path = "../../libs/util/absolute_unit" }
animate = { path = "../../libs/sim/animate" }
camera = { path = "../../libs/sim/camera" }
event_mapper = { path = "../../libs/sim/event_mapper" }
geodesy = { path = "../../libs/util/geodesy" }
global_data = { path = "../../libs/wgpu-buffer/global_data" }
gpu = { path = "../../libs/system/gpu" }
input = { path = "../../libs/system/input" }
measure = { path = "../../libs/sim/measure" }
nitrous = { path = "../../libs/util/nitrous" }
orrery = { path = "../../libs/sim/orrery" }
runtime = { path = "../../libs/util/runtime" }
window = { path = "../../libs/system/window" }
