[package]
name = "web-demo"
description.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true
readme.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow.workspace = true
chrono.workspace = true
console_error_panic_hook.workspace = true
log.workspace = true
smallvec.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
web-sys.workspace = true
wgpu.workspace = true
winit.workspace = true
# Internal
absolute_unit.workspace = true
animate.workspace = true
camera.workspace = true
event_mapper.workspace = true
geodesy.workspace = true
global_data.workspace = true
gpu.workspace = true
input.workspace = true
measure.workspace = true
nitrous.workspace = true
orrery.workspace = true
runtime.workspace = true
window.workspace = true
