[package]
name = "animate"
description.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true
readme.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
approx.workspace = true
bevy_ecs.workspace = true
futures.workspace = true
log.workspace = true
lyon_geom.workspace = true
parking_lot.workspace = true
triggered.workspace = true
# Internal
absolute_unit.workspace = true
geodesy.workspace = true
nitrous.workspace = true
runtime.workspace = true
