[package]
name = "camera"
version = "0.0.0"
authors = ["Terrence Cole <terrence.d.cole@gmail.com>"]
edition = "2021"

[dependencies]
anyhow = { version = "^ 1", features = ["backtrace"] }
bevy_ecs = { version = "^ 0.8", features = ["trace"] }
log = "^ 0.4"
nalgebra = "^ 0.31"
num = "^ 0.4"
ordered-float = "^ 3"
absolute_unit = { path = "../../util/absolute_unit" }
geodesy = { path = "../../util/geodesy" }
geometry = { path = "../../util/geometry" }
measure = { path = "../../sim/measure" }
nitrous = { path = "../../util/nitrous" }
runtime = { path = "../../util/runtime" }
window = { path = "../../system/window" }

[dev-dependencies]
approx = "^ 0.5"
physical_constants = { path = "../../util/physical_constants" }
