[package]
name = "camera"
description.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true
readme.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
bevy_ecs.workspace = true
log.workspace = true
nalgebra.workspace = true
num.workspace = true
ordered-float.workspace = true
# Internal
absolute_unit.workspace = true
geodesy.workspace = true
geometry.workspace = true
measure.workspace = true
nitrous.workspace = true
runtime.workspace = true
window.workspace = true

[dev-dependencies]
approx.workspace = true
# Internal
physical_constants.workspace = true
