[package]
name = "event_mapper"
description.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true
readme.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
bevy_ecs.workspace = true
log.workspace = true
once_cell.workspace = true
ordered-float.workspace = true
smallvec.workspace = true
strsim.workspace = true
unicase.workspace = true
# Internal
input.workspace = true
nitrous.workspace = true
runtime.workspace = true

[dev-dependencies]
env_logger.workspace = true
