[package]
name = "measure"
description = "Base component set for things like the camera"
version.workspace = true
authors.workspace = true
edition.workspace = true
readme.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
approx.workspace = true
bevy_ecs.workspace = true
nalgebra.workspace = true
# Internal
absolute_unit.workspace = true
geodesy.workspace = true
nitrous.workspace = true
physical_constants.workspace = true
