[package]
name = "orrery"
version = "0.0.0"
authors = ["Terrence Cole <terrence.d.cole@gmail.com>"]
edition = "2021"

[dependencies]
chrono = "^ 0.4"
anyhow = { version = "^ 1", features = ["backtrace"] }
bevy_ecs = "^ 0.6"
lazy_static = "^ 1"
log = "^ 0.4"
nalgebra = "^ 0.29"
ordered-float = "^ 2"
animate = { path = "../../sim/animate" }
nitrous = { path = "../../util/nitrous" }
runtime = { path = "../../util/runtime" }

[dev-dependencies]
event_mapper = { path = "../../sim/event_mapper" }
