[package]
name = "orrery"
description.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true
readme.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
chrono.workspace = true
anyhow.workspace = true
bevy_ecs.workspace = true
lazy_static.workspace = true
log.workspace = true
nalgebra.workspace = true
ordered-float.workspace = true
# Internal
animate.workspace = true
nitrous.workspace = true
runtime.workspace = true

[dev-dependencies]
# Internal
event_mapper.workspace = true
input.workspace = true
