[package]
name = "vehicle"
description.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true
readme.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
bevy_ecs.workspace = true
log.workspace = true
# Internal
absolute_unit.workspace = true
animate.workspace = true
measure.workspace = true
nitrous.workspace = true
physical_constants.workspace = true
runtime.workspace = true
