[package]
name = "catalog"
version = "0.0.0"
authors = ["Terrence Cole <terrence.d.cole@gmail.com>"]
edition = "2021"

[dependencies]
anyhow = { version = "^ 1", features = ["backtrace"] }
bevy_ecs = { version = "^ 0.7", features = ["trace"] }
glob = "^ 0.3"
log = "^ 0.4"
memmap = "^ 0.7"
smallvec = "^ 1.4"
structopt = "^ 0.3"
runtime = { path = "../../util/runtime" }
