[package]
name = "catalog"
description.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true
readme.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
bevy_ecs.workspace = true
glob.workspace = true
log.workspace = true
memmap.workspace = true
smallvec.workspace = true
structopt.workspace = true
# Internal
runtime.workspace = true
