[package]
name = "command"
description = "Command system and keybinding."
version = "0.1.0"
authors = ["Terrence Cole <terrence.d.cole@gmail.com>"]
edition = "2018"

[dependencies]
log = "^ 0.4"
failure = "^ 0.1.2"
lazy_static = "^ 1"
smallvec = "^ 1.4"
unicase = "^ 2.4"
winit = { version = "^ 0.24", features = ["web-sys"] }
