[package]
name = "gpu"
version = "0.0.0"
authors = ["Terrence Cole <terrence.d.cole@gmail.com>"]
edition = "2021"

[dependencies]
anyhow = { version = "^ 1", features = ["backtrace"] }
bevy_ecs = "^ 0.6"
futures = "^ 0.3"
log = "^ 0.4"
ordered-float = "^ 2"
parking_lot = "^ 0.11"
raw-window-handle = "^ 0.4"
structopt = "^ 0.3"
tokio = { version = "^ 1.0", features = ["rt-multi-thread", "macros", "io-util", "fs", "sync"] }
wgpu = { version = "^ 0.12", features = ["spirv"] }
winit = "^ 0.26"
zerocopy = "^ 0.5"
input = { path = "../../system/input" }
nitrous = { path = "../../util/nitrous" }
runtime = { path = "../../util/runtime" }
window = { path = "../../system/window" }

[dev-dependencies]
paste = "^ 1"
