[package]
name = "gpu"
version = "0.0.0"
authors = ["Terrence Cole <terrence.d.cole@gmail.com>"]
edition = "2021"

[dependencies]
anyhow = { version = "^ 1", features = ["backtrace"] }
bevy_ecs = { version = "^ 0.7", features = ["trace"] }
futures-lite = "^ 1"
log = "^ 0.4"
ordered-float = "^ 3"
parking_lot = "^ 0.12"
raw-window-handle = "^ 0.4"
structopt = "^ 0.3"
wgpu = { version = "^ 0.12", features = ["spirv"] }
winit = "^ 0.26"
zerocopy = "^ 0.6"
input = { path = "../../system/input" }
nitrous = { path = "../../util/nitrous" }
runtime = { path = "../../util/runtime" }
window = { path = "../../system/window" }

[dev-dependencies]
paste = "^ 1"
