[package]
name = "gpu"
description.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true
readme.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
bevy_ecs.workspace = true
futures-lite.workspace = true
log.workspace = true
ordered-float.workspace = true
parking_lot.workspace = true
raw-window-handle.workspace = true
structopt.workspace = true
wgpu.workspace = true
winit.workspace = true
zerocopy.workspace = true
# Internal
input.workspace = true
nitrous.workspace = true
runtime.workspace = true
window.workspace = true

[dev-dependencies]
paste.workspace = true
