[package]
name = "input"
version = "0.0.0"
authors = ["Terrence Cole <terrence.d.cole@gmail.com>"]
edition = "2021"

[dependencies]
anyhow = { version = "^ 1", features = ["backtrace"] }
bevy_ecs = "^ 0.6"
log = "^ 0.4"
parking_lot = "^ 0.11"
smallvec = "^ 1.4"
winit = { version = "^ 0.24", features = ["web-sys"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
# Note: need to match wgpu exactly
wasm-bindgen = "=0.2.69"
web-sys = "=0.3.46"
futures = "^ 0.3"
