[package]
name = "input"
version = "0.0.0"
authors = ["Terrence Cole <terrence.d.cole@gmail.com>"]
edition = "2021"

[dependencies]
anyhow = { version = "^ 1", features = ["backtrace"] }
bevy_ecs = { version = "^ 0.6", features = ["trace"] }
log = "^ 0.4"
parking_lot = "^ 0.11"
smallvec = "^ 1.4"
winit = "^ 0.26"
runtime = { path = "../../util/runtime" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
# Note: need to match wgpu exactly
wasm-bindgen = "=0.2.76"
web-sys = { version = "=0.3.53", features = ["console"] }
futures = "^ 0.3"
