[package]
name = "jilrs"
description = "Cross platform JoyStick Input Library"
version.workspace = true
authors.workspace = true
edition.workspace = true
readme.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
evdev = "^ 0.11"
