[package]
name = "tracelog"
version = "0.0.0"
edition = "2021"

[dependencies]
anyhow = "^ 1"
structopt = "^ 0.3"
tracing = { version = "0.1", features = ["release_max_level_info"] }
tracing-subscriber = { version = "0.3.1", features = ["registry", "env-filter"] }
tracing-chrome = "0.4.0"
tracing-log = "0.1.2"
tracing-error = "0.2.0"
nitrous = { path = "../../util/nitrous" }
runtime = { path = "../../util/runtime" }