[package]
name = "tracelog"
description.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true
readme.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
structopt.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-chrome.workspace = true
tracing-log.workspace = true
tracing-error.workspace = true
# Internal
nitrous.workspace = true
runtime.workspace = true