[package]
name = "window"
description = "Clonable Send+Sync wrapper around raw-window-handle"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "^ 0.4"
anyhow = { version = "^ 1", features = ["backtrace"] }
bevy_ecs = "^ 0.6"
ordered-float = "^ 2"
parking_lot = "^ 0.11"
structopt = "^ 0.3"
winit = "^ 0.26"
input = { path = "../../system/input" }
nitrous = { path = "../../util/nitrous" }
nitrous_injector = { path = "../../util/nitrous_injector" }
