[package]
name = "window"
description = "Clonable Send+Sync wrapper around raw-window-handle"
version.workspace = true
authors.workspace = true
edition.workspace = true
readme.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
log.workspace = true
anyhow.workspace = true
bevy_ecs.workspace = true
ordered-float.workspace = true
parking_lot.workspace = true
structopt.workspace = true
winit.workspace = true
# Internal
input.workspace = true
nitrous.workspace = true
runtime.workspace = true
