[package]
name = "absolute_unit"
description = "A system of scalars with units."
version = "0.0.0"
authors = ["Terrence Cole <terrence.d.cole@gmail.com>"]
edition = "2021"

[dependencies]
approx = "^ 0.5"
hashbag = "^ 0.1"
num-traits = "^ 0.2"
ordered-float = "^ 3"

[dev-dependencies]
nalgebra = "^ 0.31"