[package]
name = "absolute_unit"
description = "A system of scalars with units."
version.workspace = true
authors.workspace = true
edition.workspace = true
readme.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
approx.workspace = true
hashbag.workspace = true
num-traits.workspace = true
ordered-float.workspace = true

[dev-dependencies]
nalgebra.workspace = true