[package]
name = "animate"
version = "0.0.0"
authors = ["Terrence Cole <terrence.d.cole@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "^ 1"
approx = "^ 0.5"
futures = "^ 0.3"
log = "^ 0.4"
lyon_geom = "^ 0.17"
parking_lot = "^ 0.11"
triggered = "^ 0.1"
absolute_unit = { path = "../../util/absolute_unit" }
geodesy = { path = "../../util/geodesy" }
nitrous = { path = "../../util/nitrous" }
nitrous_injector = { path = "../../util/nitrous_injector" }
