[package]
name = "build_shaders"
version = "0.0.0"
authors = ["Terrence Cole <terrence.d.cole@gmail.com>"]
edition = "2021"

[dependencies]
log = "^ 0.4"
anyhow = { version = "^ 1", features = ["backtrace"] }
naga = { version = "^ 0.8", features = ["spv-in", "spv-out", "dot-out", "glsl-in", "glsl-out", "glsl-validate"] }
shaderc = "^ 0.8"
